# KIBC

./: README.md  mysql.sql
ARDUINO/: Readme.md
C/: celsius2Fahr  celsius2Fahr.c  fahr2Celsius.c  fahr2Celsius2  fahr2Celsius3.c  limits  limits.c  triangle.c
C_src/: A2Z  A2Z.c  Makefile  Readme.md  absoluteValue  absoluteValue.c  alphabetic  alphabetic.c  arithmetic  arithmetic.c  bigletter  bigletter.c  circle  circle.c  compare  compare.c  fahr2Celsius  fahr2Celsius2.c  fahr2Celsius3  fahr2Celsius3.c  genderRatio  genderRatio.c  hello.c  hello9.c  incrementor  incrementor.c  leapyear  leapyear.c  leapyear2  leapyear2.c  letterAttribute  letterAttribute.c  letterAttribute.i  letterAttribute.s  literal  literal.c  maxMidMin  maxMidMin.c  maxMidMin2  maxMidMin2.c  (+54 more)
OPEN_CV/: Readme.md
PracticalStatics/: Readme.md
SpecialLecture/: Readme.md  stack.c  stack2.c
flaskweb/: app.py
machineLearning/: LinearRSGDMain.py  LinearRSGDMainpy  LinearRSGDTest.py  README.md  aidaboostTest.py  beggingProcess.py  bindingTest.py  bostonHouseRegression.py  confusionMatricsTest.py  dicisionTreeTest.py  dropProcessing.py  featureScaling.py  fillProcessing.py  get_dummiesTest.py  gredientDescent.py  linearRegressionCustom.py  logisticLegreesionTest.py  maeRmaseR2.py  mnistClassify.ipynb  newsGroupNB.ipynb  newsGroupNB.py  simpleBaize.py  softmaxTest.py  sportsNaiveVayze.py  testAndSplit.py  votingClassifierTest.py
mysql/: 2024.2.23.sql  Create Data.sql  Create user.sql  built_in_function.sql  dcl.sql  (+8 more)
python_C_mysql/: CMakeLists.txt  Makefile  booklist  booklist.c  booklist.py
(+333 files in other folders)
